Hide old work experience to prevent the printed resume version from overflowing one page.

--- a/resume/resume.css
+++ b/resume/resume.css
@@ -764,6 +764,10 @@ section {
     margin-bottom: 0.5em;
   }
 
+  #experience .section-content ul li:nth-of-type(1n+5) {
+    display: none;
+  }
+
   #experience .title {
     margin-top: 0.5em;
   }
